sumo/tests/netgen/junction_types/errors/junction_type_actuated_tls/grid/options.netgen
--default-junction-type actuated --grid-net --grid-number=3 --grid-length=40 --output-file=net.net.xml -v
